chore: 完成网站修改

--- a/posts/人类简史读书笔记.md
+++ b/posts/人类简史读书笔记.md
@@ -6,18 +6,32 @@ author: xwchris
 desc: "人类简史是一本关于人类历史发展有着很有趣思考的一本书，本文主要记录自己感觉比较重要的点，以待后面自己查阅和会议"
 ---
 
-1. 社会的发展从采集社会到农业社会是一个判断失误，农民更加辛苦了
-2. 九成的农民养活了一成的精英，然而史书说的都是精英的故事
-3. 不论什么制度，都是想象所构建出来的秩序，以期待社会能更好的运转。然后为了让人们相信，需要辅以各种手段，如客观存在，君权神受，暴力，教育等等。而一旦这种信任崩塌，这种秩序也就不复存在。
-4. 想象的秩序与真是生活融合，如个人主义，个人隐私等等。大多数人很难接受自己的生活秩序只是想象。但从出生就置于想象中，连欲望也受其影响，因此个人欲望也就成了虚构秩序的最强大守护者。
-5. 改变想象中秩序不是件简单的事情，需要很多人一起相信才可以。
-6. 阶级有其功能，能够更高效的规范社会。阶级的形成是一个恶性循环的过程。
-7. 自由和平等互相矛盾。不是缺点，文化引擎。
-8. 历史的铁则就是，事后看来无可避免的事，在当时看来总是毫不明显。历史并非必然。历史属于二级混沌系统，会受到预测的影响而改变。
-9. 欧洲称霸全球的过程是探索和征服的过程
-10. 信用是现代经济体系的基础。这背后有一个基本假设就是，未来的资源肯定远远超过目前的资源
-11. 资本主义教条里最重要的一条是生产的利润，必须再投资于提高产量
-12. 资本主义的地狱，完全的自由市场主义。它无法保证利润会以公平的方式取得或者以公平的方式分配
-13. 工业革命的核心，其实就是能源转换的革命。人类可用的能源总量在不断增加。限制我们的只有认知。
-14. 当生产力极大提升，产量超出需求，这时消费主义萌芽，鼓励更多的消费。
-15. 资本-消费主义逻辑就像一个硬币的正反面。有钱人的最高指导是“投资”，而我们这些人的最高指导是“消费”。在过去的农业时代，贵族极度奢侈，而农民省吃俭用。而现在富豪投资和管理资产小心谨慎，而没那么有钱的人买起没那么需要的产品却毫不手软。
+社会的发展从采集社会到农业社会是一个判断失误，农民更加辛苦了
+
+九成的农民养活了一成的精英，然而史书说的都是精英的故事
+
+不论什么制度，都是想象所构建出来的秩序，以期待社会能更好的运转。然后为了让人们相信，需要辅以各种手段，如客观存在，君权神受，暴力，教育等等。而一旦这种信任崩塌，这种秩序也就不复存在。
+
+想象的秩序与真是生活融合，如个人主义，个人隐私等等。大多数人很难接受自己的生活秩序只是想象。但从出生就置于想象中，连欲望也受其影响，因此个人欲望也就成了虚构秩序的最强大守护者。
+
+改变想象中秩序不是件简单的事情，需要很多人一起相信才可以。
+
+阶级有其功能，能够更高效的规范社会。阶级的形成是一个恶性循环的过程。
+
+自由和平等互相矛盾。不是缺点，文化引擎。
+
+历史的铁则就是，事后看来无可避免的事，在当时看来总是毫不明显。历史并非必然。历史属于二级混沌系统，会受到预测的影响而改变。
+
+欧洲称霸全球的过程是探索和征服的过程
+
+信用是现代经济体系的基础。这背后有一个基本假设就是，未来的资源肯定远远超过目前的资源
+
+资本主义教条里最重要的一条是生产的利润，必须再投资于提高产量
+
+资本主义的地狱，完全的自由市场主义。它无法保证利润会以公平的方式取得或者以公平的方式分配
+
+工业革命的核心，其实就是能源转换的革命。人类可用的能源总量在不断增加。限制我们的只有认知。
+
+当生产力极大提升，产量超出需求，这时消费主义萌芽，鼓励更多的消费。
+
+资本-消费主义逻辑就像一个硬币的正反面。有钱人的最高指导是“投资”，而我们这些人的最高指导是“消费”。在过去的农业时代，贵族极度奢侈，而农民省吃俭用。而现在富豪投资和管理资产小心谨慎，而没那么有钱的人买起没那么需要的产品却毫不手软。
