--- a/posts/考试脑科学读书笔记.md
+++ b/posts/考试脑科学读书笔记.md
@@ -3,7 +3,7 @@ title: "考试脑科学读书笔记"
 date: "2021-07-10"
 tags: 读书笔记
 author: xwchris
-desc: "考试脑科学简单要点记录"
+desc: "考试脑科学是一本关于记忆的书，从脑科学的角度提出了很多帮助记忆的点，这里是其内容的简单要点记录，方便之后回忆"
 ---
 
 记忆本身是有科学依据的，人的记忆本能在于记住更有利于生存的东西。记忆从记忆期限上来分，分为短期记忆和长期记忆，分别对应电脑的内存和硬盘。长期记忆长期不使用也可能会忘记。但这些记忆并不是消失了，而是不好获取，如果能够再次学习，那么学习和记忆起来会更加快速。
